--- a/curriculo.html
+++ b/curriculo.html
@@ -35,9 +35,11 @@
           </ul>
         </div>
       </section>
-      <div class="conteudo-imagem">
-        <img src="./assets/Imagem.png" alt="Foto da Joana Santos programando" />
-      </div>
+      <img
+        class="apresentacao__imagem"
+        src="./assets/Imagem.png"
+        alt="Foto da Joana Santos programando"
+      />
     </main>
     <footer class="rodape">
       <p>Desenvolvido por Julian Luhring</p>
