--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Template</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
@@ -43,9 +43,11 @@
           </a>
         </div>
       </section>
-      <div class="conteudo-imagem">
-        <img src="./assets/Imagem.png" alt="Foto da Joana Santos programando" />
-      </div>
+      <img
+        class="apresentacao__imagem"
+        src="./assets/Imagem.png"
+        alt="Foto da Joana Santos programando"
+      />
     </main>
     <footer class="rodape">
       <p>Desenvolvido por Julian Luhring</p>
